feat(editor): add header navigation links

--- a/apps/editor/styles/global.scss
+++ b/apps/editor/styles/global.scss
@@ -1,6 +1,7 @@
 @use '@naija-spell-checker/ui/dist/styles/global.scss';
 
 .rsw-ce {
+  height: 80%;
   &:focus {
     outline: none !important;
   }
