--- a/packages/ui/src/styles/_fonts.scss
+++ b/packages/ui/src/styles/_fonts.scss
@@ -26,19 +26,19 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  src: url('../assets/fonts/Poppins/Poppins-Regular.ttf') format('ttf');
+  src: url('../assets/fonts/Poppins/Poppins-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
-  src: url('../assets/fonts/Poppins/Poppins-Medium.ttf') format('ttf');
+  src: url('../assets/fonts/Poppins/Poppins-Medium.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
-  src: url('../assets/fonts/Poppins/Poppins-Bold.ttf') format('ttf');
+  src: url('../assets/fonts/Poppins/Poppins-Bold.ttf') format('truetype');
 }
