--- a/packages/ui/src/styles/global.scss
+++ b/packages/ui/src/styles/global.scss
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: '#fff';
+    --background: #fff;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
@@ -12,15 +12,17 @@
     --popover-foreground: 0 0% 3.9%;
     --primary: #0e3f30;
     --primary-foreground: 0 0% 98%;
-    --secondary: '#a9bd89';
+    --secondary: #008850;
     --secondary-foreground: 0 0% 9%;
-    --muted: '#d3cec4';
+    --tertiary: #edfbe2;
+    --tertiary-foreground: 0 0% 9%;
+    --muted: #d3cec4;
     --muted-foreground: 0 0% 45.1%;
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
-    --destructive: '#af5040';
+    --destructive: #af5040;
     --destructive-foreground: 0 0% 98%;
-    --warning: '#bd9033';
+    --warning: #bd9033;
     --warning-foreground: 38 92% 50%;
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
@@ -35,7 +37,7 @@
     --font-cabinet-grotesk: 'Cabinet Grotesk', sans-serif;
   }
   .dark {
-    --background: '#1111';
+    --background: #1111;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
@@ -82,4 +84,9 @@ h4,
 h5,
 h6 {
   font-family: var(--font-cabinet-grotesk);
+}
+
+a:hover {
+  color: var(--secondary);
+  cursor: pointer;
 }
