feat(editor): enable installing editor app as pwa

--- a/packages/ui/src/styles/global.scss
+++ b/packages/ui/src/styles/global.scss
@@ -88,5 +88,10 @@ h6 {
 
 a:hover {
   color: var(--secondary);
-  cursor: pointer;
+  cursor: pointer !important;
+}
+
+
+ul, ol {
+  list-style: initial;
 }
