fix: height of canvas mirror element

--- a/apps/editor/components/editor.module.scss
+++ b/apps/editor/components/editor.module.scss
@@ -7,4 +7,13 @@
     list-style: decimal;
     list-style-position: inside;
   }
+
+  :global(.rsw-ce) {
+    height: fit-content;
+  }
+
+  :global(.rsw-toolbar) {
+    position: sticky;
+    top: 0;
+  }
 }
