feat: setup translator app

--- a/packages/ui/src/styles/global.scss
+++ b/packages/ui/src/styles/global.scss
@@ -65,12 +65,9 @@
 }
 
 @layer base {
-  * {
-    @apply tw-border-border;
-  }
-  body {
-    @apply tw-bg-background tw-text-foreground;
-  }
+  // body {
+  //   // @apply tw-bg-background tw-text-foreground;
+  // }
 }
 
 body {
