fix: svg imports in translator app

--- a/packages/ui/src/styles/global.scss
+++ b/packages/ui/src/styles/global.scss
@@ -65,9 +65,12 @@
 }
 
 @layer base {
-  // body {
-  //   // @apply tw-bg-background tw-text-foreground;
-  // }
+  * {
+    @apply tw-border-border;
+  }
+  body {
+    @apply tw-bg-background tw-text-foreground;
+  }
 }
 
 body {
